# mid-way

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: branch-name.yml  ci.yml
mid_way/: __init__.py  database.py  main.py  models.py
mid_way/templates/: base.html  home.html
tests/: test_health.py  test_home.py  test_models.py
